--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/strata.css">
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="strata.css">
         <script src="https://kit.fontawesome.com/97235d3b92.js" crossorigin="anonymous"></script>
     </head>
     <body>
